# hackaton

./: .gitignore  .gitlab-ci.yml  README.md
components/exhauster_backend/: .env.example  README.md  pyproject.toml  setup.cfg
components/exhauster_backend/exhauster/adapters/: cli.py
components/exhauster_backend/exhauster/adapters/database/: __init__.py  dashboard.py  mapping.py  repositories.py  settings.py  tables.py
components/exhauster_backend/exhauster/adapters/kafka/: __init__.py  consumer.py  settings.py
components/exhauster_backend/exhauster/adapters/log/: __init__.py  settings.py
components/exhauster_backend/exhauster/adapters/message_bus/: consumer.py  scheme.py  settings.py
components/exhauster_backend/exhauster/adapters/sensor_storage/: __init__.py  client.py  settings.py  signals.py  storage.py  writer.py
components/exhauster_backend/exhauster/adapters/shop_api/: app.py  controllers.py
components/exhauster_backend/exhauster/adapters/web_api/: __init__.py  app.py  controllers.py  models.py  settings.py  spec.py
components/exhauster_backend/exhauster/application/: constants.py  entities.py  interfaces.py  sensors.py  services.py
components/exhauster_backend/exhauster/application/dashboard/: dto.py  entities.py  errors.py  interfaces.py  services.py
components/exhauster_backend/exhauster/composites/: alembic_runner.py  cli.py  etl.py  prediction.py  shop_api.py  web_api.py  worker.py
components/exhauster_backend/prepare/: consumer.py  exgauser.ipynb  influx_.py  transfer.py  xls_parser_maper.py  Маппинг сигналов.xlsx
docs/: schema.puml
(+332 files in other folders)
