[metadata]
name = exhauster
version = 0.0.1
description = exhauster
author = Aleksandr Tolmachev
author_email = alextolmy@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/kutovoy/2023_evraz_hackaton/-/tree/dev


[options]
packages = find_namespace:
python_requires = >=3.7

install_requires =
    attrs~=21.2.0
    pydantic~=1.8.2
    alembic~=1.7.0
    sqlalchemy~=1.4.23
    psycopg2-binary~=2.9.5
    gunicorn~=20.0.0
    click~=7.1.0
    python-json-logger~=2.0.0
    kafka-python~=2.0.2
    python-dateutil~=2.8.2
    backports.cached-property
    openpyxl~=3.1.1
    pandas~=1.2.5
    numpy~=1.21.6
    kombu~=5.1.0
    pmdarima~=2.0.2


    pytz~=2021.3
    influxdb-client~=1.36.0

    classic-components~=0.0.1
    classic-aspects~=0.0.1
    classic-http-api~=0.0.2
    classic-app-layer~=0.0.1
    classic-sql-storage~=0.0.1
    classic-messaging~=0.0.1
    classic-messaging-kombu~=0.0.1


[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    pytest_alembic~=0.9.1
    isort~=5.10.0
    yapf~=0.32.0
    toml~=0.10.2
    flake8~=5.0.4
    Flake8-pyproject~=1.1.0

[options.entry_points]
console_scripts =
    exhauster=exhauster.composites.cli:cli
